package CB1;

public abstract class  ATM {
    protected int menhGia;

    public abstract ATM thietLapMenhGiaThapHon(ATM atm);

    public abstract void rutTien(int soTien);

}
